--- a/src/app/components/admin/ad/add-ad/add-ad.component.html
+++ b/src/app/components/admin/ad/add-ad/add-ad.component.html
@@ -9,7 +9,7 @@
           style="font-family: 'Open Sans', sans-serif;"
         >
           <div>
-            <h2 class="text-4xl">CREA UN INGREDIENTE</h2>
+            <h2 class="text-4xl">CREA UNA PUBLICIDAD</h2>
           </div>
         </div>
         <div class="w-full flex justify-center items-center h-full">
@@ -118,7 +118,6 @@
               <div class="md:w-1/3"></div>
               <div class="flex space-x-4 justify-end md:w-2/3">
                 <button
-                  [disabled]="form.invalid"
                   (click)="addAd()"
                   class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button"
