--- a/src/app/components/admin/ad/edit-ad/edit-ad.component.html
+++ b/src/app/components/admin/ad/edit-ad/edit-ad.component.html
@@ -8,7 +8,7 @@
           style="font-family: 'Open Sans', sans-serif;"
         >
           <div>
-            <h2 class="text-4xl">EDITA EL INGREDIENTE</h2>
+            <h2 class="text-4xl">EDITA LA PUBLICIDAD</h2>
           </div>
         </div>
         <div class="w-full flex justify-center items-center h-full">
@@ -117,7 +117,6 @@
               <div class="md:w-1/3"></div>
               <div class="flex space-x-4 justify-end md:w-2/3">
                 <button
-                  [disabled]="form.invalid"
                   (click)="editAd()"
                   class="md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
                   type="button"
