--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -112,7 +112,7 @@
                     type="text"
                     [bsConfig]="dpConfig"
                     bsDatepicker
-                    placement="right"
+                    placement="top"
                     readonly
                     required
                     isAdult
@@ -263,5 +263,13 @@
               </div>
             </form>
           </div>
+
+          <div id="al" style="display: none;" class="px-5 pt-12 pb-12">
+            <div class="bg-red-100 border border-red-300 text-red-700 pl-4 pr-8 py-3 rounded relative" role="alert">
+                <strong class="font-bold">Error! </strong>
+                <span class="block sm:inline">{{err}}</span>
+              </div>
+        </div>
+
 <app-footer></app-footer>
 </div>
