--- a/src/app/components/admin/ad/add-ad/add-ad.component.html
+++ b/src/app/components/admin/ad/add-ad/add-ad.component.html
@@ -74,7 +74,7 @@
                     class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
                     for="inline-full-name"
                   >
-                    Ícono
+                    Foto
                   </label>
                 </div>
                 <div class="md:w-4/5">
