--- a/src/app/components/drinks/show-filter/show-filter.component.html
+++ b/src/app/components/drinks/show-filter/show-filter.component.html
@@ -5,7 +5,7 @@
   <app-admin-header></app-admin-header>     
           <div  *ngIf="!loading" class="flex flex-wrap md:flex-no-wrap sm:flex-wrap -mx-2 pb-12 pt-16 px-32 overflow-hidden">
             <div
-              *ngFor="let x of drinks"
+              *ngFor="let x of drinksA"
               class="w-1/3 px-8 rounded sm:p-8 md:p-8 my-2 overflow-hidden  rounded-lg"
             >
               <img
