--- a/src/app/components/test-bar/test-bar.component.html
+++ b/src/app/components/test-bar/test-bar.component.html
@@ -1,5 +1,5 @@
 
-<input type="checkbox" (change)="makeChange($event)" class="h-10 w-10" id="check">
+<input type="checkbox" (change)="makeChange()" class="h-10 w-10" id="check">
 <label for="check"> 
     <svg [ngStyle]="{'left.rem': sidebar_left? '13': '-13'}" class="fill-current h-10 w-10 outline-none" id="cancel">
         <path
@@ -22,6 +22,7 @@
         <li><a href="/profile"><img src="assets/images/post.png" class="h-16">Publica</a></li>
         <li *ngIf="isAdmin"><a href="/admin"><img src="assets/images/settings.png" class="h-16">Administrar</a></li>
         <li *ngIf="isLogged"><a href="/profile"><img src="assets/images/user.png" class="h-16">Tu Perfil</a></li>
+        <li *ngIf="!isLogged"><a href="/login"><img src="assets/images/user.png" class="h-16">Entrar</a></li>
     </ul>
 
 </div>
