--- a/src/app/components/drinks/drinks-list/drinks-list.component.html
+++ b/src/app/components/drinks/drinks-list/drinks-list.component.html
@@ -3,7 +3,7 @@
 
 <div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
 
-  <app-admin-header></app-admin-header>
+  <app-header hasSearchBar=true searchBarContent='nombre...' ></app-header>
         <div class="pt-12 pb-12 flex justify-center">
           <button
                   (click)="goToFilter()"
