responsive zone-list

--- a/src/app/components/post-drink/post-drink.component.html
+++ b/src/app/components/post-drink/post-drink.component.html
@@ -13,7 +13,7 @@
         <app-loader></app-loader>
     </div>
 
-    <div *ngIf="!loading"> 
+    <div *ngIf="!loading" style="font-family: 'Open Sans', sans-serif;"> 
         <div *ngIf="!sending && !sent" class="w-full min-h-full content-center">  
             <div
             class="h-20 w-full flex justify-center items-center pt-12 pb-12"
