--- a/src/app/components/admin/zone/list-zone/list-zone.component.html
+++ b/src/app/components/admin/zone/list-zone/list-zone.component.html
@@ -14,8 +14,8 @@
         <div><h2 class="text-4xl">LISTA DE ZONAS</h2></div>
       </div>
 
-      <div class="w-full flex justify-center items-center h-full">
-          <div class="w-2/3 lg:w-2/4 content-center">
+      <div class="w-full  flex justify-center items-center h-full">
+          <div class="w-2/3 md:3/4 lg:w-2/4 content-center">
             <div class="w-full flex justify-center mb-6">
                   <button
                     (click)="create()"
@@ -42,7 +42,7 @@
           *ngFor="let item of zones"
           class="w-full flex justify-center items-center h-full"
         >
-          <div class="w-2/3 lg:w-2/4 content-center">
+          <div class="w-2/3 md:3/4 lg:w-2/4 content-center">
             <div class="sm:flex sm:items-center mb-6">
               
               <div class="w-full flex justify-center sm:justify-end lg:justify-center sm:w-2/5 sm:text-left">
