--- a/src/app/components/admin/drink/add-drink/add-drink.component.html
+++ b/src/app/components/admin/drink/add-drink/add-drink.component.html
@@ -1,5 +1,7 @@
 
+
 <app-test-bar (message)="getMessage($event)"></app-test-bar> 
+
 
 <div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
 
@@ -12,7 +14,7 @@
       <h2 class="text-4xl">CREA UN TRAGO</h2>
     </div>
   </div>
-  <div class="w-full flex justify-center items-center h-full">
+  <div class="w-full flex justify-center items-center h-full" *ngIf="!loading">
     <form
       [formGroup]="form"
       class="w-2/4 content-center"
@@ -235,40 +237,68 @@
                 </div>
               </div>
 
-      <div class="width-full">
-        <div class="md:flex md:items-center mb-6">
-            <div class="md:w-1/5">
-          <label
-            class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
-            for="inline-full-name"
-          >
-            Ingredientes
-          </label>
-        </div>
 
-        <div
-          class="md:flex md:items-center mb-6"
-          *ngFor="let item of ingredient_arr; let i = index"
-        >
-          <div *ngIf="item.available">
-            <label class="md:w-2/3 block text-gray-500 font-bold">
-              <input
-                class="mr-2 leading-tight"
-                type="checkbox"
-                (change)="getSelect(item)"
-              />
-              <span class="text-sm">
-                {{ item.name }}
-              </span>
-            </label>
-          </div>
-        </div>
-        </div>
-        <app-required-field
+              <div formArrayName="ingredients" class="width-full">
+                <div
+                  *ngFor="let group of IngArray.controls; let i = index"
+                  [formGroupName]="i"
+                  class="width-full"
+                >
+                  <div class="md:flex md:items-center mb-6">
+                    <div class="md:w-1/5">
+                      <label
+                        class="block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                        for="inline-full-name"
+                      >
+                        Ingrediente
+                      </label>
+                    </div>
+                    <div class="md:w-2/5">
+                        
+                        <input
+                        matInput
+                        formControlName="ingredients"
+                        list="ing_list"
+                        class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                        id="inline-full-name"
+                        type="text"
+                        placeholder="Ej. Fresa" 
+                        [matAutocomplete]="auto"
+                        (ngModelChange)="change(i)"
+                        (click)="clicked(i)"
+                      />
+                      <mat-autocomplete #auto="matAutocomplete" autoActiveFirstOption>
+                        <mat-option *ngFor="let option of autocomplete" [value]="option">
+                          {{option}}
+                        </mat-option>
+                      </mat-autocomplete>
+                       
+                       
+                    </div>
+                    <div class="flex space-x-4 justify-end md:w-2/5">
+                      <button
+                        (click)="addIng()"
+                        class="md:w-1/3 shadow bg-gray-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                        type="button"
+                      >
+                        +
+                      </button>
+                      <button
+                        *ngIf="i != 0"
+                        (click)="deleteIng(i)"
+                        class="md:w-1/3 shadow bg-gray-500 hover:bg-red-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                        type="button"
+                      >
+                        -
+                      </button>
+                    </div>
+                  </div>
+                  <app-required-field
+                    *ngIf="group.controls.ingredients.invalid && group.controls.ingredients.touched"
                     [text]="'Este campo es requerido.'"
-                    *ngIf="mas_de_uno()"
-                ></app-required-field>
-      </div>
+                  ></app-required-field>
+                </div>
+              </div>
 
       <div class="md:flex md:items-center mb-6">
         <div class="md:w-1/3"></div>
@@ -292,6 +322,189 @@
     </form>
   </div>
 
+
+
+  <!----CREA UN INGREDIENTE---->
+
+  <div
+        class="h-20 w-full flex justify-center items-center"
+        style="font-family: 'Open Sans', sans-serif;"
+      >
+        <div>
+          <h2 class="text-xl sm:text-4xl">CREA UN INGREDIENTE</h2>
+        </div>
+      </div>
+      <div class="w-full flex justify-center items-center h-full">
+        <form
+          [formGroup]="form_ing"
+          class="w-2/4 content-center"
+          encType="multipart/form-data"
+        >
+        <div class="width-full">
+          <div class="md:flex md:items-center mb-6">
+            <div class="md:w-1/5">
+              <label
+                class="text-lg sm:text-2xl block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                for="inline-full-name"
+              >
+                Nombre
+              </label>
+            </div>
+            <div class="md:w-4/5">
+              <input
+                formControlName="name_ing"
+                class="bg-gray-200 appearance-none border-2 border-gray-200 rounded w-full py-3 px-4 text-gray-700 leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                id="inline-full-name"
+                type="text"
+                placeholder="Ej. Ron"
+              />
+            </div>
+          </div>
+          <app-required-field
+                  [text]="'Este campo es requerido.'"
+                  *ngIf="form_ing.get('name_ing').invalid && form_ing.get('name_ing').touched"
+              ></app-required-field>
+          </div>
+
+          <div class="width-full">
+          <div class="md:flex md:items-center mb-6">
+            <div class="md:w-1/5">
+              <label
+                class="text-lg sm:text-2xl block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                for="inline-full-name"
+              >
+                Categoría
+              </label>
+            </div>
+            <div class="md:w-4/5 relative">
+              <select
+                formControlName="category_ing"
+                class="block appearance-none w-full bg-gray-200 border border-gray-200 text-gray-700 py-3 px-4 pr-8 rounded leading-tight focus:outline-none focus:bg-white focus:border-orange-500"
+                id="grid-state"
+              >
+                <option [value]="item" *ngFor="let item of categories_ing">{{
+                  item
+                }}</option>
+              </select>
+              <div
+                class=" absolute inset-y-0 right-0 flex justify-center items-center px-8 text-gray-700"
+              >
+                <svg
+                  class=" fill-current h-4 w-4"
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 20 20"
+                >
+                  <path
+                    d="M9.293 12.95l.707.707L15.657 8l-1.414-1.414L10 10.828 5.757 6.586 4.343 8z"
+                  />
+                </svg>
+              </div>
+            </div>
+          </div>
+          <app-required-field
+                  [text]="'Este campo es requerido.'"
+                  *ngIf="form_ing.get('category_ing').invalid && form_ing.get('category_ing').touched"
+          ></app-required-field>
+          </div>
+
+          <div class="md:items-center mb-6">
+              <div class="md:w-full">
+                <label
+                  style="font-family: 'Open Sans', sans-serif;"
+                  class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
+                >
+                  Galería
+                </label>
+              </div>
+              <div class="md:w-full">
+                <label
+                  style="font-family: 'Open Sans', sans-serif;"
+                  class="block text-black-500 font-bold md:text-center mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
+                >
+                  Por favor, esperar a que aparezcan las fotos. Esto indicará que
+                  fueron cargadas con éxito.
+                </label>
+              </div>
+            </div>
+
+          <div class="md:flex mb-6">
+              <div class="md:w-1/5">
+                <label
+                  class="text-lg sm:text-2xl block text-black-500 font-bold md:text-right mb-1 md:mb-0 pr-4"
+                  for="inline-full-name"
+                >
+                  Ícono
+                </label>
+              </div>
+              <div class="md:w-4/5">
+                <div
+                  *ngIf="!this.main_image_ing"
+                  class="md:flex items-center"
+                >
+                  <label class="justify-center font-normal text-base sm:text-lg md:text-xl">
+                    <span>Ningun archivo seleccionado</span>
+                  </label>
+                  <label
+                    class="justify-center bg-grey-lighter w-full flex items-center h-full px-4 py-3 pr-8 bg-gray-200 rounded-lg shadow-lg tracking-wide border border-blue cursor-pointer hover:bg-orange-400 hover:text-white"
+                  >
+                    <span class="text-base items-center leading-normal"
+                      >Selecciona un archivo</span
+                    >
+                    <lib-file-upload-firestorage
+                      storagePath="ingredient"
+                      (res)="uploadEnRes_ing($event)"
+                      class="hidden"
+                    >
+                    </lib-file-upload-firestorage>
+                  </label>
+                </div>
+
+                <div *ngIf="this.main_image_ing" class="width-full bg-grey-lighter">
+                  <div class="width-2/3 flex items-center justify-center">
+                    <img [src]="this.main_image_ing" class="h-24" />
+                  </div>
+                  <div class="flex space-x-4 justify-center w-full">
+                    <button
+                      (click)="changeImage_ing(this.main_image_ing)"
+                      class="md:w-1/5 shadow bg-gray-500 hover:bg-orange-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                      type="button"
+                    >
+                      Cambiar
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+          <div class="md:flex md:items-center mb-6">
+            <div class="md:w-1/3"></div>
+            <div class="flex space-x-4 justify-center sm:justify-end md:justify-end md:w-2/3">
+              <button
+                [disabled]="form_ing.invalid"
+                (click)="addIngredient()"
+                class="text-lg md:text-2xl md:w-1/4 shadow bg-green-500 hover:bg-green-400 focus:shadow-outline focus:outline-none text-white font-bold py-2 px-4 rounded"
+                type="button"
+              >
+                Crear
+              </button>
+              
+            </div>
+          </div>
+        </form>
+      </div>
+
+
+
+
+
     <app-footer></app-footer>
 
 </div>
+
+
+
+
+<!---- AÑADIR INGREDIENTE  -->
+
