--- a/src/app/components/drinks/drinks-list/drinks-list.component.html
+++ b/src/app/components/drinks/drinks-list/drinks-list.component.html
@@ -3,7 +3,7 @@
 
 <div [ngStyle]="{'margin-left.rem': !sidebar? '0': '16'}" class="move">
 
-  <app-header hasSearchBar=true searchBarContent='nombre...' ></app-header>
+  <app-header hasSearchBar=true searchBarContent='nombre...' [arr]="drinksA" ></app-header>
         <div class="pt-12 pb-12 flex justify-center">
           <button
                   (click)="goToFilter()"
@@ -15,7 +15,7 @@
         </div>        
           <div  *ngIf="!loading" class="flex flex-wrap md:flex-wrap sm:flex-wrap -mx-2 pb-12 pt-16 px-32 overflow-hidden">
             <div
-              *ngFor="let x of drinksA"
+              *ngFor="let x of drinksA | filter: filterPost"
               class="w-1/3 px-8 rounded sm:p-8 md:p-8 my-2 overflow-hidden"
             >
               <img
@@ -37,5 +37,8 @@
               </div>
             </div>
           </div>
+
       <app-footer></app-footer>
     </div>
+
+
